<resources>
    <string name="app_name">Login-Registration</string>
    <string name="verify">Verify Now</string>
    <string name="logout">LOGOUT</string>
    <string name="verfytxt">Please Verify Your Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="enternewpassword">Enter New Password</string>
    <string name="confirmpw">Confirm Password</string>
    <string name="resetpw">Reset Password</string>
    <string name="register">Register</string>
    <string name="forgetpw">Forget Password</string>
    <string name="update_email">Update Email</string>
    <string name="delete_acc">Delete Account</string>
    <string name="signout">Signout</string>
</resources>